[package]
name = "blamo"
version = "0.1.0"
authors = ["Jimmy Zelinskie <jimmy.zelinskie+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "1.0"
actix-rt = "1.0"
actix-web = "2.0"
anyhow = "1.0"
serde = "1.0"
